--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <nav id="site-menu" class="site-nav" role="navigation" aria-label="Primary">
         <ul>
-          <li><a href="#home" class="nav-link">Home</a></li>
+          <li><a href="/home.html" class="nav-link">Home</a></li>
           <li><a href="#about" class="nav-link">About Us</a></li>
           <li><a href="#products" class="nav-link">Products</a></li>
           <li><a href="#services" class="nav-link">Services</a></li>
@@ -66,7 +66,7 @@
       <div class="hero-art" aria-hidden="true">
         <!-- Decorative graphic -->
         <div class="blob"></div>
-	 <img src="assets/img/Main Page.jpg">
+          <img src="assets/img/Main Page.jpg">
 
       </div>
     </div>
@@ -77,7 +77,7 @@
     <div class="container two-col">
       <div class="media card">
         <div class="img-placeholder" role="img" aria-label="Team working illustration"></div>
-	<img src="assets/img/AboutUs.jpg">
+	    <img src="assets/img/AboutUs.jpg">
       </div>
       <div class="content">
         <h2>About Us</h2>
